# emergency-ai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  FEATURES.md  README.md  alembic.ini  conftest.py  docker-compose.yml  fly.toml  pyproject.toml
.flow/: SHOWCASE_SPEC.md
.flow/init/: DESIGN.md  INTEGRATION.md  REQUIREMENTS.md
.github/workflows/: board-sync.yml  ci.yml
alembic/: env.py
alembic/versions/: 20240101_0000_0001_initial_schema.py
bench/: bench.py  results.md
docs/: index.html  manifest.webmanifest  sw.js
docs/css/: styles.css
docs/data/: cities.json  disasters.json  i18n.json  medical_ref.json  poison.json  scenarios.json
docs/js/: app.js  effects.js  engine.js
infra/: fly.toml
scripts/: load_test.js  smoke.sh
src/emergency_ai/: __init__.py
src/emergency_ai/api/: metrics.py  middleware.py  server.py
src/emergency_ai/cache/: __init__.py  redis_client.py
src/emergency_ai/cities/: bangalore.md  berlin.md  chicago.md  delhi.md  london.md  los-angeles.md  mumbai.md  new-york.md  paris.md  san-francisco.md  singapore.md  sydney.md  tokyo.md  toronto.md
src/emergency_ai/cli/: main.py
src/emergency_ai/core/: cache.py  cities.py  client.py  geo.py  metrics.py  prompts.py  report.py  retrieval.py  scenarios.py  schema.py  store.py  triage.py
src/emergency_ai/db/: __init__.py  models.py  session.py
src/emergency_ai/rag/: __init__.py  embed.py  ingest.py  search.py
tests/: test_api.py  test_cities.py  test_client.py  test_json_streaming.py  test_prompts.py  test_schema.py  test_v1_api.py  test_v1_features.py
