[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-ai"
version = "1.0.0"
description = "Offline-first emergency-response PWA + FastAPI service: triage, retrieval-augmented jurisdiction lookup, Redis cache, Postgres audit store, and Prometheus metrics."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "CasterlyGit" }]
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
redis = [
    "redis>=5.0",
]
postgres = [
    "asyncpg>=0.29",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
emergency = "emergency_ai.cli.main:cli"
emergency-server = "emergency_ai.api.server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"emergency_ai" = ["cities/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
